@@ -1,6 +1,7 @@
 package tn.esprit.formation.service;
 
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.mail.SimpleMailMessage;
 import org.springframework.mail.javamail.JavaMailSender;
@@ -9,7 +10,6 @@ import tn.esprit.formation.dto.FormationDto;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Envoi d'un email automatique lorsqu'une nouvelle formation (examen/certificat) est ajoutée.
@@ -20,27 +20,27 @@ import java.util.stream.Collectors;
 public class FormationNotificationService {
 
     private final JavaMailSender mailSender;
+    private final String mailTo;
+    private final boolean enabled;
 
-    public FormationNotificationService(@org.springframework.beans.factory.annotation.Autowired(required = false) JavaMailSender mailSender) {
+    public FormationNotificationService(
+            @Autowired(required = false) JavaMailSender mailSender,
+            @Value("${formation.notification.mail.to:}") String mailTo,
+            @Value("${formation.notification.mail.enabled:true}") boolean enabled) {
         this.mailSender = mailSender;
+        this.mailTo = mailTo != null ? mailTo : "";
+        this.enabled = enabled;
     }
 
-    /** Adresses qui reçoivent la notification (séparées par des virgules). Vide = pas d'envoi. */
-    @Value("${formation.notification.mail.to:}")
-    private String mailTo;
-
-    @Value("${formation.notification.mail.enabled:true}")
-    private boolean enabled;
-
     public void notifyNewFormation(FormationDto dto) {
-        if (mailSender == null || !enabled || mailTo == null || mailTo.isBlank()) {
+        if (mailSender == null || !enabled || mailTo.isBlank()) {
             log.debug("Notification nouvelle formation désactivée ou pas d'adresse/SMTP configuré.");
             return;
         }
         List<String> toList = Arrays.stream(mailTo.split(","))
                 .map(String::trim)
                 .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
+                .toList();
         if (toList.isEmpty()) return;
 
         try {
